RocketApiKubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rocket-api
            port:
              number: 8080
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx
            port:
              number: 80
